test/tests/compiler/18_structures/invalid_parse/extra_credit/plx1_sizeof_union_pointer_1.plx
type union u1(a: i32)

pub fn main(none) i32 {
    sizeof<*union u1>[].a = 10
    return 0
}
